# Concept

./: .gitignore  OVERRIDES.md  README.md  WORLD_PACK.md  auto-imports.d.ts  components.d.ts  findings.md  index.html  package.json  pnpm-lock.yaml  progress.md  task_plan.md  tsconfig.app.json  vite.config.ts
docs/: CLAUDE.md  DESIGN.md  OVERRIDES.md  UI.md  domain-pack-v2.md
docs/claude/: findings.md  progress.md  task_plan.md
domains/japanese/: pack.json
domains/odin/: pack.json
src/: App.vue  bindings.ts  main.ts  store.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: anki.rs  db.rs  domain.rs  error.rs  extensions.rs  graph.rs  lib.rs  pack_registry.rs  scheduler.rs  world_registry.rs
src-tauri/src/source_pack/: compiler.rs  diagnostics.rs  loader.rs  markdown.rs  mod.rs  note_types.rs  types.rs
src/assets/: main.css
src/components/: BufferOverlay.vue  CompassHUD.vue  GreetComponent.vue  LayerPanel.vue  ModeIndicator.vue  NodeDetailPanel.vue  NodeEditorOverlay.vue  NodeSearch.vue  ProgressOverlay.vue  SettingsPanel.vue  WorldPickerOverlay.vue
src/components/authoring/: AuthoringPanel.vue
src/components/node/: AnkiCardPageRenderer.vue  NodeBlockRenderer.vue  NodeConnectionsPage.vue  NodeExtensionOutlet.vue  NodeFieldRenderer.vue  NodeHistoryPage.vue  layout.ts  (+5 more)
src/composables/: useEditorMode.ts  useForceLayout.ts  useGraphEditorSync.ts  useSettings.ts  useTauRPC.ts  useTheme.ts
src/core/: kernel.ts  modules.ts  nodeExtensions.ts  plugin.ts  themes.ts
src/plugins/: bootstrap.ts  corePlugins.ts  defaultPlugin.ts  example.override.ts  userPlugins.ts
src/stores/: graph.ts
user-plugins/: README.md  example.plugin.ts
(+27 files in other folders)
